--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
     <head>
+        <link rel="stylesheet" href="stile.css">
         <title></title>
         <script>
 
