--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html lang="it">
     <head>
         <link rel="stylesheet" href="stile.css">
+        <link rel="stylesheet" href="script.js">
         <title></title>
         <script>
 
