--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,10 @@
         </script>
     </head>
     <body>
-
+        <div class="comand">
+            <button class="bott">Gioca</button>
+            <button class="bott">Regole</button>
+            <button class="bott">Comandi</button>
+        </div>
     </body>
 </html>
