--- a/index.htm
+++ b/index.htm
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div class="comand">
-            <button class="bott">Gioca</button>
-            <button class="bott">Regole</button>
+            <button class="bott">Gioca</button><br>
+            <button class="bott">Regole</button><br>
             <button class="bott">Comandi</button>
         </div>
     </body>
