--- a/index.htm
+++ b/index.htm
@@ -10,10 +10,9 @@
     </head>
     <body>
         <div class="comand">
-            <button class="bott">Gioca</button><br>
-            <button class="bott">Regole</button><br>
-            <button class="bott">Comandi</button>
-            <a href="https://www.fontspace.com/category/old-english%22%3E<img src="https://see.fontimg.com/api/renderfont4/vmVwZ/eyJyIjoiZnMiLCJoIjo1NCwidyI6MTAwMCwiZnMiOjU0LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/Q2FjY2lhIGFsbCB1LWJvYXQ/ro-spritendo-semibold-beta.png" alt="Old English fonts"></a>
+            <button class="bott"></button><br>
+            <button class="bott"></button><br>
+            <button class="bott"></button>
         </div>
     </body>
 </html>
