--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="comand">
-            <button class="bott"></button><br>
+            <button class="bott">Caccia all'Uboat</button><br>
             <button class="bott"></button><br>
             <button class="bott"></button>
         </div>
