--- a/index.htm
+++ b/index.htm
@@ -11,9 +11,9 @@
     <body>
         <div class="tito">Caccia all'Uboat</div>
         <div class="comand">
-            <button class="bott">Caccia all'Uboat</button><br>
-            <button class="bott"></button><br>
-            <button class="bott"></button>
+            <button class="bott">Gioca</button><br>
+            <button class="bott">Regole</button><br>
+            <button class="bott">Comandi</button>
         </div>
     </body>
 </html>
