--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 
         </script>
     </head>
-    <body>
+    <body id="bd">
         <div class="tito">Caccia all'Uboat</div>
         <div class="comand">
             <button class="bott">Gioca</button><br>
