--- a/index.htm
+++ b/index.htm
@@ -11,9 +11,9 @@
     <body id="bd">
         <div class="tito">Caccia all'Uboat</div>
         <div class="comand">
-            <button class="bott">Gioca</button><br>
-            <button class="bott">Regole</button><br>
-            <button class="bott">Comandi</button>
+            <button class="bott" onclick="gioco()">Gioca</button><br>
+            <button class="bott" onclick="regol()">Regole</button><br>
+            <button class="bott" onclick="comands()">Comandi</button>
         </div>
     </body>
 </html>
