--- a/index.htm
+++ b/index.htm
@@ -8,12 +8,14 @@
 
         </script>
     </head>
-    <body id="bd">
+    <body>
+        <div>
         <div class="tito">Caccia all'Uboat</div>
-        <div class="comand">
-            <button class="bott" onclick="gioco()">Gioca</button><br>
-            <button class="bott" onclick="regol()">Regole</button><br>
-            <button class="bott" onclick="comands()">Comandi</button>
+            <div class="comand">
+                <button class="bott" onclick="gioco()">Gioca</button><br>
+                <button class="bott" onclick="regol()">Regole</button><br>
+                <button class="bott" onclick="comands()">Comandi</button>
+            </div>
         </div>
     </body>
 </html>
