--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,9 @@
         <div>
         <div class="tito">Caccia all'Uboat</div>
             <div class="comand">
-                <button class="bott" onclick="gioco()">Gioca</button><br>
-                <button class="bott" onclick="regol()">Regole</button><br>
-                <button class="bott" onclick="comands()">Comandi</button>
+                <input type="button" class="bott" onclick="gioco()">Gioca</button><br>
+                <input type="button"button class="bott" onclick="regol()">Regole</button><br>
+                <input type="button"button class="bott" onclick="comands()">Comandi</button>
             </div>
         </div>
     </body>
