--- a/index.htm
+++ b/index.htm
@@ -9,8 +9,8 @@
         </script>
     </head>
     <body>
-        <div>
-        <div class="tito">Caccia all'Uboat</div>
+        <div id="campo">
+            <div class="tito">Caccia all'Uboat</div>
             <div class="comand">
                 <input type="button" class="bott" onclick="gioco()" value="Gioca"><br>
                 <input type="button"button class="bott" onclick="regol()" value="Regole"><br>
