--- a/Gioco.htm
+++ b/Gioco.htm
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="it">
+    <head>
+        <link rel="stylesheet" href="stile.css">
+        <link rel="stylesheet" href="script.js">
+        <title></title>
+    </head>
+    <body>
+      
+    </body>
+</html>
