--- a/Gioco.htm
+++ b/Gioco.htm
@@ -6,6 +6,6 @@
         <title></title>
     </head>
     <body>
-      
+      <input type="button" class="bott" value="Gioca" onclick="inizia()">
     </body>
 </html>
