--- a/Gioco.htm
+++ b/Gioco.htm
@@ -7,7 +7,7 @@
     </head>
     <body>
         <table>
-            <tr>
+            <tr class="t1">
                 <td>
                     <input type="button" class="bott" value="1" onclick="inizia()">
                 </td>
@@ -16,7 +16,7 @@
                     <p>desc4</p>
                 </td>    
             </tr>
-             <tr>
+             <tr calss="t2">
                 <td>
                     <input type="button" class="bott" value="2" onclick="inizia()">
                 </td>
@@ -25,7 +25,7 @@
                     <p>desc4</p>
                 </td>    
             </tr>
-             <tr>
+             <tr class"t3">
                 <td>
                     <input type="button" class="bott" value="3" onclick="inizia()">
                 </td>
@@ -34,7 +34,7 @@
                     <p>desc4</p>
                 </td>    
             </tr>
-             <tr>
+             <tr class="t4">
                 <td>
                     <input type="button" class="bott" value="4" onclick="inizia()">
                 </td>
