--- a/index.htm
+++ b/index.htm
@@ -13,8 +13,8 @@
             <div class="tito">Caccia all'Uboat</div>
             <div class="comand">
                 <input type="button" class="bott" onclick="gioco()" value="Gioca"><br>
-                <input type="button"button class="bott" onclick="regol()" value="Regole"><br>
-                <input type="button"button class="bott" onclick="comands()" value="Comandi">
+                <input type="button" class="bott" onclick="regol()" value="Regole"><br>
+                <input type="button" class="bott" onclick="comands()" value="Comandi">
             </div>
         </div>
     </body>
