--- a/gameplay.htm
+++ b/gameplay.htm
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="it">
+    <head>
+        <link rel="stylesheet" href="stile.css">
+        
+        <title></title>
+    </head>
+    <body>
+        
+    </body>
+</html>
