--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
         </script>
     </head>
     <body>
-        <div id="campo">
+        <div>
             <div class="tito">Caccia all'Uboat</div>
             <div class="comand">
                 <input type="button" class="bott" onclick="gioco()" value="Gioca"><br>
