--- a/Gioco.htm
+++ b/Gioco.htm
@@ -7,7 +7,7 @@
     </head>
     <body>
         <table>
-            <tr class="t1">
+            <tr class="t">
                 <td>
                     <input type="button" class="bott" value="1" onclick="nave1()">
                 </td>
@@ -16,7 +16,7 @@
                     <p>desc4</p>
                 </td>    
             </tr>
-             <tr calss="t2">
+             <tr calss="t">
                 <td>
                     <input type="button" class="bott" value="2" onclick="nave2()">
                 </td>
@@ -25,7 +25,7 @@
                     <p>desc4</p>
                 </td>    
             </tr>
-             <tr class"t3">
+             <tr class"t">
                 <td>
                     <input type="button" class="bott" value="3" onclick="nave3()">
                 </td>
@@ -34,7 +34,7 @@
                     <p>desc4</p>
                 </td>    
             </tr>
-             <tr class="t4">
+             <tr class="t">
                 <td>
                     <input type="button" class="bott" value="4" onclick="nave4()">
                 </td>
