--- a/Gioco.htm
+++ b/Gioco.htm
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="schermata">
-            <table>
+            <table align="center">
                 <tr class="t">
                     <td>
                         <input type="button" class="bott" value="1" onclick="nave1()">
