--- a/gameplay.htm
+++ b/gameplay.htm
@@ -2,7 +2,7 @@
 <html lang="it">
     <head>
         <link rel="stylesheet" href="stile.css">
-        
+        <script src="script.js"></script>
         <title></title>
     </head>
     <body>
