--- a/Gioco.htm
+++ b/Gioco.htm
@@ -8,6 +8,7 @@
     <body>
         <div class="schermata">
             <table align="center" width="70%" border="1">
+                <caption>seleziona la tua nave</caption>
                 <tr class="t">
                     <td>
                         <input type="button" class="bott" value="1" onclick="nave1()">
