--- a/Gioco.htm
+++ b/Gioco.htm
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="schermata">
-            <table align="center" width="70%" border="1">
+            <table >
                 <caption>seleziona la tua nave</caption>
                 
                 <tr class="t">
