--- a/Gioco.htm
+++ b/Gioco.htm
@@ -27,7 +27,8 @@
                     </td>
 
                     <td>
-                        <p>desc4</p>
+                        <p>Il cacciatorpediniere HMS Maori è specializzato nella caccia dei sottomarini;Nave veloce e dotato di equipaggiamento anti-sommergibili come il sonar molto sensibile ad ogni oggetto sott'acqua  e al suo armamento speciale, le cariche di profondità;un barile di acciaio contenente una carica esplosiva che viene sganciata in mare dalla nave e che raggiunta una certa profondità detona; unico problema è che non possono essere sganciate a lunghe distanze.
+</p>
                     </td>    
                 </tr>
                  <tr calss="t">
