--- a/Gioco.htm
+++ b/Gioco.htm
@@ -37,7 +37,8 @@
                     </td>
 
                     <td>
-                        <p>desc4</p>
+                        <p>L’incrociatore HMS Manchester è una buona nave da scorta, è buona per la caccia al sommergibile,con cannoni più precisi del cacciatorpediniere ha una velocità minore;l’armamento speciale dell’incrociatore sono le mine navali, dispositivi speciali che la nave può sganciare per minare una casella della mappa;quando il sommergibile entrerà nella casella minata, farà detonare le mine.
+</p>
                     </td>    
                 </tr>
                  <tr class"t">
@@ -46,7 +47,7 @@
                     </td>
 
                      <td>
-                        <p>desc4</p>
+                        <p>L’incrociatore pesante HMS York è un buona fusione tra potenza di fuoco e mobilità,non è specializzato nella caccia ai sommergibili ma farà sempre un buon lavoro;il suo armamento speciale è il Bombardiere imbarcato;con l’utilizzo di una catapulta idraulica,si può lanciare un bombardiere leggero che può sganciare in una casella un carica in grado di stanare un possibile sommergibile,non è obbligatorio che il sommergibile sia individuato.</p>
                     </td>    
                 </tr>
                  <tr class="t">
@@ -55,7 +56,7 @@
                     </td>
 
                      <td>
-                        <p>desc4</p>
+                        <p>La corazzata HMS King George V è un guerriero da battaglia sul mare, ma non è una nave adatta per distruggere un sommergibile;questo mostro d'acciaio monta dei cannoni da 356 mm in grado di devastare c’ho che colpisce,il suo armamento speciale è il sovraccarico motori in cui la nave, per un piccolo lasso di turni, aumenta la distanza che può percorrere.</p>
                     </td>    
                  </tr>
 
