--- a/Gioco.htm
+++ b/Gioco.htm
@@ -23,7 +23,7 @@
                 
                 <tr class="t">
                     <td>
-                        <img src="image/Cacciatorpediniere HMS Maori.jpg" input type="button" class="bott" value="1" onclick="nave1()">
+                        <img src="image/Cacciatorpediniere HMS Maori.jpg" input type="button" class="bott" value="1" onclick="nave1()" width="30px" heigth="20px">
                     </td>
 
                     <td>
