--- a/Gioco.htm
+++ b/Gioco.htm
@@ -33,7 +33,7 @@
                 </tr>
                  <tr calss="t">
                     <td>
-                        <input type="button" class="bott" value="2" onclick="nave2()">
+                        <img src="image/Incrociatore leggero HMS Manchester.jpg" input type="button" class="bott" value="1" onclick="nave1()" width="600px" heigth="400px">
                     </td>
 
                     <td>
