--- a/Gioco.htm
+++ b/Gioco.htm
@@ -43,7 +43,7 @@
                 </tr>
                  <tr class"t">
                     <td>
-                        <input type="button" class="bott" value="3" onclick="nave3()">
+                         <img src="image/Incrociatore Pesante HMS York.jpg" input type="button" class="bott" value="1" onclick="nave1()" width="6000px" heigth="4000px">
                     </td>
 
                      <td>
@@ -52,7 +52,7 @@
                 </tr>
                  <tr class="t">
                     <td>
-                        <input type="button" class="bott" value="4" onclick="nave4()">
+                        <img src="image/Corazzata HMS King George V.jpg" input type="button" class="bott" value="1" onclick="nave1()" width="600px" heigth="400px">
                     </td>
 
                      <td>
