--- a/Gioco.htm
+++ b/Gioco.htm
@@ -23,7 +23,7 @@
                 
                 <tr class="t">
                     <td>
-                        <img src="image/Cacciatorpediniere HMS Maori.jpg" input type="button" class="bott" value="1" onclick="nave1()" width="200px" heigth="120px">
+                        <img src="image/Cacciatorpediniere HMS Maori.jpg" input type="button" class="bott" value="1" onclick="nave1()" width="80%" heigth="80%">
                     </td>
 
                     <td>
