--- a/Gioco.htm
+++ b/Gioco.htm
@@ -6,7 +6,7 @@
         <title></title>
     </head>
     <body>
-        <div class="scherm2">
+        <div class="schermata">
             <table >
                 <caption>seleziona la tua nave</caption>
                 
