--- a/Gioco.htm
+++ b/Gioco.htm
@@ -15,7 +15,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="image/Cacciatorpediniere HMS Maori.jpg" input type="button" class="navi" value="1" onclick="nave1()">
+                        <img src="image/Cacciatorpediniere HMS Maori.jpg" input type="button" class="navi" value="1" onclick="nave1()" width="100%" height="100%">
                     </td>
                     <td>
                         <p>Il cacciatorpediniere HMS Maori è specializzato nella caccia dei sottomarini;Nave veloce e dotato di equipaggiamento anti-sommergibili come il sonar molto sensibile ad ogni oggetto sott'acqua  e al suo armamento speciale, le cariche di profondità;un barile di acciaio contenente una carica esplosiva che viene sganciata in mare dalla nave e che raggiunta una certa profondità detona; unico problema è che non possono essere sganciate a lunghe distanze.</p>
