--- a/Gioco.htm
+++ b/Gioco.htm
@@ -31,7 +31,7 @@
                 </tr>
                  <tr>
                     <td>
-                         <img src="image/Incrociatore Pesante HMS York.jpg" input type="button" class="navi" value="1" onclick="nave1()">
+                         <img src="image/Incrociatore Pesante HMS York.jpg" input type="button" class="navi" value="1" onclick="nave1()" width="25%" height="25%">
                     </td>
                      <td>
                         <p>L’incrociatore pesante HMS York è un buona fusione tra potenza di fuoco e mobilità,non è specializzato nella caccia ai sommergibili ma farà sempre un buon lavoro;il suo armamento speciale è il Bombardiere imbarcato;con l’utilizzo di una catapulta idraulica,si può lanciare un bombardiere leggero che può sganciare in una casella un carica in grado di stanare un possibile sommergibile,non è obbligatorio che il sommergibile sia individuato.</p>
