--- a/Gioco.htm
+++ b/Gioco.htm
@@ -8,7 +8,7 @@
     <body>
         <div class="schermata">
             <table width="100%" height="100%">
-                <caption>seleziona la tua nave</caption>
+                <caption id="titbarca">seleziona la tua nave</caption>
                 <tr>
                     <th>NAVI</th> 
                     <th>DESCRIZIONE</th>   
