--- a/Gioco.htm
+++ b/Gioco.htm
@@ -8,6 +8,7 @@
     <body>
         <div class="schermata">
             <table width="100%" height="100%">
+                ciao
                 <tr>
                     <td>
                         <img src="image/Cacciatorpediniere HMS Maori.jpg" input type="button" class="navi" onclick="nave1()" width="100%" height="100%" style="max-height:100%; max-width:100%">
