--- a/gameplay.htm
+++ b/gameplay.htm
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="stile.css">
         <script src="script.js"></script>
-        <title>Caccia al UBoot</title>
+        <title>Caccia all' UBoot</title>
     </head>
     <body>
         <p id="countdown">7:00</p>
