--- a/Gioco.htm
+++ b/Gioco.htm
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div class="schermata">
+            ciao
             <table width="100%" height="100%">
                 <tr>
                     <td>
