--- a/Gioco.htm
+++ b/Gioco.htm
@@ -8,6 +8,7 @@
     <body>
         <div class="schermata">
             ciao
+            iao
             <table width="100%" height="100%">
                 <tr>
                     <td>
