--- a/Gioco.htm
+++ b/Gioco.htm
@@ -9,6 +9,11 @@
         <div class="schermata">
             ciao
             iao
+            iao
+            iao
+            iao
+            iaoiao
+            iao
             <table width="100%" height="100%">
                 <tr>
                     <td>
