--- a/Gioco.htm
+++ b/Gioco.htm
@@ -7,9 +7,9 @@
     </head>
     <body>
         <div class="schermata">
-            ciao
-            iao
-            iao
+            ciao<br>
+            iao<br>
+            iao<br>
             iao
             iao
             iaoiao
