--- a/Gioco.htm
+++ b/Gioco.htm
@@ -13,7 +13,7 @@
                         <img src="image/Cacciatorpediniere HMS Maori.jpg" input type="button" class="navi" onclick="nave1()" width="100%" height="100%" style="max-height:100%; max-width:100%">
                     </td>
                     <td>
-                        <p>Il cacciatorpediniere HMS Maori è specializzato nella caccia dei sottomarini;Nave veloce e dotato di equipaggiamento anti-sommergibili come il sonar molto sensibile ad ogni oggetto sott'acqua  e al suo armamento speciale, le cariche di profondità;un barile di acciaio contenente una carica esplosiva che viene sganciata in mare dalla nave e che raggiunta una certa profondità detona; unico problema è che non possono essere sganciate a lunghe distanze.</p>
+                        <p class="desc">Il cacciatorpediniere HMS Maori è specializzato nella caccia dei sottomarini;Nave veloce e dotato di equipaggiamento anti-sommergibili come il sonar molto sensibile ad ogni oggetto sott'acqua  e al suo armamento speciale, le cariche di profondità;un barile di acciaio contenente una carica esplosiva che viene sganciata in mare dalla nave e che raggiunta una certa profondità detona; unico problema è che non possono essere sganciate a lunghe distanze.</p>
                     </td>    
                 </tr>
                  <tr>
@@ -21,7 +21,7 @@
                         <img src="image/Incrociatore leggero HMS Manchester.jpg" input type="button" onclick="nave2()" width="100%" height="100%" style="max-height:100%; max-width:100%">
                     </td>
                     <td>
-                        <p>L’incrociatore HMS Manchester è una buona nave da scorta, è buona per la caccia al sommergibile,con cannoni più precisi del cacciatorpediniere ha una velocità minore;l’armamento speciale dell’incrociatore sono le mine navali, dispositivi speciali che la nave può sganciare per minare una casella della mappa;quando il sommergibile entrerà nella casella minata, farà detonare le mine.</p>
+                        <p class="desc">L’incrociatore HMS Manchester è una buona nave da scorta, è buona per la caccia al sommergibile,con cannoni più precisi del cacciatorpediniere ha una velocità minore;l’armamento speciale dell’incrociatore sono le mine navali, dispositivi speciali che la nave può sganciare per minare una casella della mappa;quando il sommergibile entrerà nella casella minata, farà detonare le mine.</p>
                     </td>    
                 </tr>
                  <tr>
@@ -29,7 +29,7 @@
                          <img src="image/Incrociatore Pesante HMS York.jpg" input type="button" onclick="nave3()" width="100%" height="100%" style="max-height:100%; max-width:100%">
                     </td>
                      <td>
-                        <p>L’incrociatore pesante HMS York è un buona fusione tra potenza di fuoco e mobilità,non è specializzato nella caccia ai sommergibili ma farà sempre un buon lavoro;il suo armamento speciale è il Bombardiere imbarcato;con l’utilizzo di una catapulta idraulica,si può lanciare un bombardiere leggero che può sganciare in una casella un carica in grado di stanare un possibile sommergibile,non è obbligatorio che il sommergibile sia individuato.</p>
+                        <p class="desc">L’incrociatore pesante HMS York è un buona fusione tra potenza di fuoco e mobilità,non è specializzato nella caccia ai sommergibili ma farà sempre un buon lavoro;il suo armamento speciale è il Bombardiere imbarcato;con l’utilizzo di una catapulta idraulica,si può lanciare un bombardiere leggero che può sganciare in una casella un carica in grado di stanare un possibile sommergibile,non è obbligatorio che il sommergibile sia individuato.</p>
                     </td>    
                 </tr>
                  <tr>
@@ -37,7 +37,7 @@
                         <img src="image/Corazzata HMS King George V.jpg" input type="button" onclick="nave4()" width="100%" height="100%" style="max-height:100%; max-width:100%">
                     </td>
                      <td>
-                        <p>La corazzata HMS King George V è un guerriero da battaglia sul mare, ma non è una nave adatta per distruggere un sommergibile;questo mostro d'acciaio monta dei cannoni da 356 mm in grado di devastare c’ho che colpisce,il suo armamento speciale è il sovraccarico motori in cui la nave, per un piccolo lasso di turni, aumenta la distanza che può percorrere.</p>
+                        <p class="desc">La corazzata HMS King George V è un guerriero da battaglia sul mare, ma non è una nave adatta per distruggere un sommergibile;questo mostro d'acciaio monta dei cannoni da 356 mm in grado di devastare c’ho che colpisce,il suo armamento speciale è il sovraccarico motori in cui la nave, per un piccolo lasso di turni, aumenta la distanza che può percorrere.</p>
                     </td>    
                  </tr>
             </table>
