--- a/Gioco.htm
+++ b/Gioco.htm
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="schermata">
-            <center>Scegli la tua barca</center>
+            <p id="titobarca">Scegli la tua barca</p>
             <table width="100%" height="95%">
                 <tr>
                     <td>
