--- a/Gioco.htm
+++ b/Gioco.htm
@@ -6,7 +6,7 @@
         <title></title>
     </head>
     <body>
-        <div class="schermata">
+        <div class="schermata_2">
             <p id="titobarca">Scegli la tua barca</p>
             <table width="100%" height="95%">
                 <tr>
