--- a/Gioco.htm
+++ b/Gioco.htm
@@ -41,6 +41,14 @@
                         <p class="desc">La corazzata HMS King George V è un guerriero da battaglia sul mare, ma non è una nave adatta per distruggere un sommergibile;questo mostro d'acciaio monta dei cannoni da 356 mm in grado di devastare c’ho che colpisce,il suo armamento speciale è il sovraccarico motori in cui la nave, per un piccolo lasso di turni, aumenta la distanza che può percorrere.</p>
                     </td>    
                  </tr>
+                <tr class="selez">
+                    <td class="spazim">
+                        <img src="image/Portaerei HMS Ark Royal.jpg" input type="button" onclick="nave4()" width="100%" height="100%" style="max-height:100%; max-width:100%">
+                    </td>
+                     <td  class="selez">
+                        <p class="desc">La HMS Ark Royal è l’ammiraglia della Royal Navy, Questa maestosa nave ha come armamento principale il ponte di volo da cui i suoi aerei possono partire e distruggere i bersagli, ha tre tipologie di ’aerei: il bombardiere; con cui può danneggiare, il ricognitore con cui può rilevare le navi nemiche e l’aereo sonar è in grado di sganciare piccoli rilevatori sonar in mare con cui trovare possibili sommergibili</p>
+                    </td>    
+                 </tr>
             </table>
      </div>
     </body>
