--- a/Regole.htm
+++ b/Regole.htm
@@ -2,9 +2,20 @@
 <html lang="it">
     <head>
         <link rel="stylesheet" href="stile.css">
-        
+        <script src="script.js"></script>
         <title></title>
     </head>
     <body>
+        <div class="schermata_2">
+        <p id="titobarca">Regole</p>
+            <table id="table1">
+                <tr class="selez">
+                    <td class="selez">
+                        <p class="desc"> La partita dura massimo 7 minuti l'obiettivo è eliminare la u-boat tedesco con la propria nave prima che distrugga l'intero convoglio </p>
+                    </td>    
+                </tr>
+                
+            </table>
+        </div>
     </body>
 </html>
