--- a/Comandi.htm
+++ b/Comandi.htm
@@ -46,7 +46,7 @@
                         <p class="desc1"> L </p>
                     </td>
                     <td class="selez">
-                        <p class="desc"> Permete di scagliare un attacco base"></p>
+                        <p class="desc"> Permete di scagliare un attacco base</p>
                     </td>
                 </tr>
                 <tr class="selez">
