--- a/Comandi.htm
+++ b/Comandi.htm
@@ -14,7 +14,7 @@
                         <p class="desc1" > W </p>
                     </td>
                     <td class="selez">
-                        <p class="desc"> Permete di muovere verso l'alto la nave </p>
+                        <p class="desc"> Permette di muovere verso l'alto la nave </p>
                     </td>
                 </tr>
                 <tr class="selez">
@@ -22,7 +22,7 @@
                         <p class="desc1"> A </p>
                     </td>
                     <td class="selez">
-                        <p class="desc"> Permete di muovere verso sinistra la nave </p>
+                        <p class="desc"> Permette di muovere verso sinistra la nave </p>
                     </td>
                 </tr>
                 <tr class="selez">
@@ -30,7 +30,7 @@
                         <p class="desc1"> S </p>
                     </td>
                     <td class="selez">
-                        <p class="desc"> Permete di muovere verso il basso la nave </p>
+                        <p class="desc"> Permette di muovere verso il basso la nave </p>
                     </td>
                 </tr>
                 <tr class="selez">
@@ -38,7 +38,7 @@
                         <p class="desc1"> D </p>
                     </td>
                     <td class="selez">
-                        <p class="desc"> Permete di muovere verso destra la nave </p>
+                        <p class="desc"> Permette di muovere verso destra la nave </p>
                     </td>
                 </tr>
                 <tr class="selez">
@@ -46,7 +46,7 @@
                         <p class="desc1"> L </p>
                     </td>
                     <td class="selez">
-                        <p class="desc"> Permete di scagliare un attacco base</p>
+                        <p class="desc"> Permette di scagliare un attacco base</p>
                     </td>
                 </tr>
                 <tr class="selez">
@@ -54,7 +54,7 @@
                         <p class="desc1">K </p>
                     </td>
                     <td class="selez">
-                        <p class="desc">Permete di attivare l'attacco speciale </p>
+                        <p class="desc">Permette di attivare l'attacco speciale </p>
                     </td>
                 </tr>
 
