--- a/gameplay.htm
+++ b/gameplay.htm
@@ -7,6 +7,10 @@
     </head>
     <body>
         <p id="countdown">7:00</p>
+        <div class="progress">
+            <div class="progress__fill"></div>
+            <span class="progress__text">0 HP</span>
+        </div>
         <div id="campo">
         </div>
     </body>
