--- a/gameplay.htm
+++ b/gameplay.htm
@@ -6,10 +6,12 @@
         <title>Caccia all' UBoot</title>
     </head>
     <body>
-        <p id="countdown">7:00</p>
-        <div class="progress">
-            <div class="progress__fill"></div>
-            <span class="progress__text">0 HP</span>
+        <div class="parametri">
+            <p id="countdown">7:00</p>
+            <div class="progress">
+                <div class="progress__fill"></div>
+                <span class="progress__text">0 HP</span>
+            </div>
         </div>
         <div id="campo">
         </div>
