--- a/gameplay.htm
+++ b/gameplay.htm
@@ -8,6 +8,7 @@
     <body>
         <div class="parametri">
             <p id="countdown">7:00</p>
+            <p>Vita U-boat</p>
             <div class="progress">
                 <div class="progress__fill"></div>
                 <span class="progress__text">0 HP</span>
