--- a/Regole.htm
+++ b/Regole.htm
@@ -11,7 +11,7 @@
             <table id="table1">
                 <tr class="selez">
                     <td class="selez">
-                        <p class="desc"> La partita dura massimo 7 minuti l'obiettivo è eliminare la u-boat tedesco con la propria nave prima che distrugga l'intero convoglio </p>
+                        <p class="desc"> Il gioco è ambientato durante la seconda guerra mondiale; seleziona la nave della Royal Navy l'obiettivo è quello di eliminare un U-Boat tedesco che sta minacciando di distruggere un convoglio alleato. avrai 7 minuti per distruggere il sommergibile, se non l’ho distruggerai in tempo, L’U-Boat distruggerà il convoglio e perderai la partita. </p>
                     </td>    
                 </tr>
                 
