--- a/gameplay.htm
+++ b/gameplay.htm
@@ -16,5 +16,6 @@
         </div>
         <div id="campo">
         </div>
+         <audio controls loop src="sounds/soundtrack.mp3"></audio>
     </body>
 </html>
