--- a/Gioco.htm
+++ b/Gioco.htm
@@ -12,7 +12,7 @@
         <div class="pricetab">
           <h1 height=" 10%"> cacciatorpediniere HMS Maori </h1>
           <div class="price"> 
-            <h2 class="spazim"><img src="image/Cacciatorpediniere HMS Maori.jpg" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2> 
+            <h2 class="spazim"><img src="image/Cacciatorpediniere HMS Maori.jpg"  alt="cacciatorpediniere HMS Maori" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2> 
           </div>
           <div class="infos">
             <h3>Il cacciatorpediniere HMS Maori è specializzato nella caccia dei sottomarini; Nave veloce e dotato di equipaggiamento anti-sommergibili come il sonar molto sensibile ad ogni oggetto sott'acqua e al suo armamento speciale, le cariche di profondità; un barile di acciaio contenente una carica esplosiva che viene sganciata in mare dalla nave e che raggiunta una certa profondità detona; unico problema è che non possono essere sganciate a lunghe distanze</h3>
