--- a/Gioco.htm
+++ b/Gioco.htm
@@ -24,7 +24,7 @@
         <div class="pricetab">
           <h1>incrociatore HMS Manchester</h1>
           <div class="price"> 
-            <h2 class="spazim"><img src="image/Incrociatore leggero HMS Manchester.jpg"  width="100%" height="100%" style="max-height:100%; max-width:100%"></h2> 
+            <h2 class="spazim"><img src="image/Incrociatore leggero HMS Manchester.jpg"  alt="incrociatore HMS Manchester" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2> 
           </div>
           <div class="infos">
             <h3> L’incrociatore HMS Manchester è una buona nave da scorta, è buona per la caccia al sommergibile, con cannoni più precisi del cacciatorpediniere ha una velocità minore;l’armamento speciale dell’incrociatore sono le mine navali, dispositivi speciali che la nave può sganciare per minare una casella della mappa; quando il sommergibile entrerà nella casella minata, farà detonare le mine</h3>
