--- a/Gioco.htm
+++ b/Gioco.htm
@@ -36,7 +36,7 @@
         <div class="pricetab">
           <h1> incrociatore pesante HMS York </h1>
           <div class="price"> 
-            <h2 class="spazim"><img src="image/Incrociatore Pesante HMS York.jpg" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
+            <h2 class="spazim"><img src="image/Incrociatore Pesante HMS York.jpg" alt="incrociatore pesante HMS York" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
           </div>
           <div class="infos">
             <h3> L’incrociatore pesante HMS York è una buona fusione tra potenza di fuoco e mobilità, non è specializzato nella caccia ai sommergibili ma farà sempre un buon lavoro;il suo armamento speciale è il Bombardiere imbarcato; con l’utilizzo di una catapulta idraulica, si può lanciare un bombardiere leggero che può sganciare in una casella un carica in grado di stanare un possibile sommergibile, non è obbligatorio che il sommergibile sia individuato</h3>
