--- a/Gioco.htm
+++ b/Gioco.htm
@@ -50,7 +50,7 @@
         <div class="pricetab">
           <h1> corazzata HMS King George V </h1>
           <div class="price"> 
-            <h2 class="spazim"><img src="image/Corazzata HMS King George V.jpg" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
+            <h2 class="spazim"><img src="image/Corazzata HMS King George V.jpg" alt="corazzata HMS King George V" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
           </div>
           <div class="infos">
             <h3> La corazzata HMS King George V è un guerriero da battaglia sul mare, ma non è una nave adatta per distruggere un sommergibile; questo mostro d'acciaio monta dei cannoni da 356 mm in grado di devastare c’ho che colpisce, il suo armamento speciale è il sovraccarico motori in cui la nave, per un piccolo lasso di turni, aumenta la distanza che può percorrere</h3>
@@ -65,7 +65,7 @@
         <div class="pricetab">
           <h1> Portaerei HMS Ark Royal </h1>
           <div class="price"> 
-            <h2 class="spazim"><img src="image/Portaerei HMS Ark Royal.jpg"  width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
+            <h2 class="spazim"><img src="image/Portaerei HMS Ark Royal.jpg" alt="Portaerei HMS Ark Royal" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
           </div>
           <div class="infos">
             <h3> La HMS Ark Royal è l’ammiraglia della Royal Navy, Questa maestosa nave ha come armamento principale il ponte di volo da cui i suoi aerei possono partire e distruggere i bersagli, ha tre tipologie di ’aerei: il bombardiere; con cui può danneggiare, il ricognitore con cui può rilevare le navi nemiche e l’aereo sonar è in grado di sganciare piccoli rilevatori sonar in mare con cui trovare possibili sommergibili</h3>
