--- a/Gioco.htm
+++ b/Gioco.htm
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="stile.css">
         <script src="script.js"></script>
-        <title></title>
+        <title>Seleziona nave</title>
     </head>
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <body class="schermata_2">
