--- a/gameplay.htm
+++ b/gameplay.htm
@@ -5,7 +5,7 @@
         <script src="script.js"></script>
         <title>Caccia all' UBoot</title>
     </head>
-    <body>
+    <body class = "schermata_2">
         <div class="parametri">
             <p id="countdown">7:00</p>
             <p>Vita U-boat</p>
