--- a/gameplay.htm
+++ b/gameplay.htm
@@ -9,9 +9,9 @@
         <div class="parametri">
             <p id="countdown">7:00</p>
             <p>Vita U-boat</p>
-            <div class="progress">
-                <div class="progress__fill"></div>
-                <span class="progress__text">0 HP</span>
+            <div class="health">
+                <div class="health__fill"></div>
+                <span class="health__text">0 HP</span>
             </div>
         </div>
         <div id="campo">
