--- a/gameplay.htm
+++ b/gameplay.htm
@@ -14,6 +14,7 @@
                 <span class="health__text">0 HP</span>
             </div>
         </div>
+        <div id="sonar"></div>
         <div id="campo">
         </div>
          <audio controls loop src="sounds/soundtrack.mp3"></audio>
