--- a/gameplay.htm
+++ b/gameplay.htm
@@ -15,8 +15,7 @@
             </div>
         </div>
         <div id="sonar"></div>
-        <div id="campo">
-        </div>
-         <audio controls loop src="sounds/soundtrack.mp3"></audio>
+        <div id="campo"></div>
+        <audio controls loop src="sounds/soundtrack.mp3"></audio>
     </body>
 </html>
