--- a/gameplay.htm
+++ b/gameplay.htm
@@ -8,7 +8,7 @@
     <body class = "schermata_2">
         <div class="parametri">
             <p id="countdown">7:00</p>
-            <p>Vita U-boat</p>
+            <p class="desc">Vita U-boat</p>
             <div class="health">
                 <div class="health__fill"></div>
                 <span class="health__text">0 HP</span>
