--- a/gameplay.htm
+++ b/gameplay.htm
@@ -13,6 +13,7 @@
                 <div class="health__fill"></div>
                 <span class="health__text">0 HP</span>
             </div>
+            <p class="desc">Sonar</p>
             <div id="sonar"></div>
         </div>
         <div id="campo"></div>
