--- a/gameplay.htm
+++ b/gameplay.htm
@@ -14,7 +14,7 @@
                 <span class="health__text">0 HP</span>
             </div>
             <p class="desc">Sonar</p>
-            <div id="sonar"></div>
+            <div class="conts" id="sonar"></div>
         </div>
         <div id="campo"></div>
         <audio controls loop src="sounds/soundtrack.mp3"></audio>
