--- a/Gioco.htm
+++ b/Gioco.htm
@@ -6,11 +6,11 @@
         <title>Seleziona nave</title>
     </head>
     <body class="schermata_2">
-      <h1 class="title"> Seleziona la tua nave </h1>
+      <h1 class="titoloselezione"> Seleziona la tua nave </h1>
       <div id="container">
 
         <div class="naveselezione">
-          <h1> Cacciatorpediniere HMS Maori </h1>
+          <h1 class="nnavselezione"> Cacciatorpediniere HMS Maori </h1>
           <div class="imgselezione"> 
             <h2 class="spazim"><img src="image/Cacciatorpediniere HMS Maori.jpg"  alt="cacciatorpediniere HMS Maori" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2> 
           </div>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="naveselezione">
-          <h1> Incrociatore HMS Manchester</h1>
+          <h1 class="nnavselezione"> Incrociatore HMS Manchester</h1>
           <div class="imgselezione"> 
             <h2 class="spazim"><img src="image/Incrociatore leggero HMS Manchester.jpg"  alt="incrociatore HMS Manchester" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2> 
           </div>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="naveselezione">
-          <h1> Incrociatore pesante HMS York </h1>
+          <h1 class="nnavselezione">Incrociatore pesante HMS York</h1>
           <div class="imgselezione"> 
             <h2 class="spazim"><img src="image/Incrociatore Pesante HMS York.jpg" alt="incrociatore pesante HMS York" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
           </div>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="naveselezione">   
-          <h1> Corazzata HMS King George V </h1>
+          <h1 class="nnavselezione"> Corazzata HMS King George V </h1>
           <div class="imgselezione"> 
             <h2 class="spazim"><img src="image/Corazzata HMS King George V.jpg" alt="corazzata HMS King George V" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
           </div>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="naveselezione">
-          <h1> Portaerei HMS Ark Royal </h1>
+          <h1 class="nnavselezione"> Portaerei HMS Ark Royal </h1>
           <div class="imgselezione"> 
             <h2 class="spazim"><img src="image/Portaerei HMS Ark Royal.jpg" alt="Portaerei HMS Ark Royal" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
           </div>
