--- a/index.htm
+++ b/index.htm
@@ -3,14 +3,11 @@
     <head>
         <link rel="stylesheet" href="stile.css">
         <script src="script.js"></script>
-        <title></title>
-        <script>
-
-        </script>
+        <title>Home</title>
     </head>
     <body>
         <div class="schermata">
-            <div class="tito">Caccia all'Uboat</div>
+            <div class="titolo">Caccia all'Uboat</div>
             <div class="comand">
                 <input type="button" class="bott" onclick="gioco()" value="Gioca"><br>
                 <input type="button" class="bott" onclick="regol()" value="Regole"><br>
