--- a/Gioco.htm
+++ b/Gioco.htm
@@ -10,12 +10,12 @@
       <div id="container">
 
         <div class="naveselezione">
-          <h1 class="nnavselezione"> Cacciatorpediniere HMS Maori </h1>
+          <p class="nnavselezione"> Cacciatorpediniere HMS Maori </p>
           <div class="imgselezione"> 
-            <h2 class="spazim"><img src="image/Cacciatorpediniere HMS Maori.jpg"  alt="cacciatorpediniere HMS Maori" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2> 
+            <p class="spazim"><img src="image/Cacciatorpediniere HMS Maori.jpg"  alt="cacciatorpediniere HMS Maori" width="100%" height="100%" style="max-height:100%; max-width:100%"></p> 
           </div>
           <div class="infos">
-            <h3 class="desc"> Il cacciatorpediniere HMS Maori è specializzato nella caccia dei sottomarini; Nave veloce e dotato di equipaggiamento anti-sommergibili come il sonar molto sensibile ad ogni oggetto sott'acqua e al suo armamento speciale, le cariche di profondità; un barile di acciaio contenente una carica esplosiva che viene sganciata in mare dalla nave e che raggiunta una certa profondità detona; unico problema è che non possono essere sganciate a lunghe distanze</h3>
+            <p class="desc"> Il cacciatorpediniere HMS Maori è specializzato nella caccia dei sottomarini; Nave veloce e dotato di equipaggiamento anti-sommergibili come il sonar molto sensibile ad ogni oggetto sott'acqua e al suo armamento speciale, le cariche di profondità; un barile di acciaio contenente una carica esplosiva che viene sganciata in mare dalla nave e che raggiunta una certa profondità detona; unico problema è che non possono essere sganciate a lunghe distanze</p>
           </div>
             <div class="button">
                 <input class="bott1" type="button" onclick="nave1()" value="SELEZIONA">
@@ -23,12 +23,12 @@
         </div>
 
         <div class="naveselezione">
-          <h1 class="nnavselezione"> Incrociatore HMS Manchester</h1>
+          <p class="nnavselezione"> Incrociatore HMS Manchester</p>
           <div class="imgselezione"> 
-            <h2 class="spazim"><img src="image/Incrociatore leggero HMS Manchester.jpg"  alt="incrociatore HMS Manchester" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2> 
+            <p class="spazim"><img src="image/Incrociatore leggero HMS Manchester.jpg"  alt="incrociatore HMS Manchester" width="100%" height="100%" style="max-height:100%; max-width:100%"></p> 
           </div>
           <div class="infos">
-            <h3 class="desc"> L’incrociatore HMS Manchester è una buona nave da scorta, è buona per la caccia al sommergibile, con cannoni più precisi del cacciatorpediniere ha una velocità minore;l’armamento speciale dell’incrociatore sono le mine navali, dispositivi speciali che la nave può sganciare per minare una casella della mappa; quando il sommergibile entrerà nella casella minata, farà detonare le mine</h3>
+            <p class="desc"> L’incrociatore HMS Manchester è una buona nave da scorta, è buona per la caccia al sommergibile, con cannoni più precisi del cacciatorpediniere ha una velocità minore;l’armamento speciale dell’incrociatore sono le mine navali, dispositivi speciali che la nave può sganciare per minare una casella della mappa; quando il sommergibile entrerà nella casella minata, farà detonare le mine</p>
           </div>
             <div class="button">
                 <input class="bott1" type="button" onclick="nave2()" value="SELEZIONA">
@@ -36,12 +36,12 @@
         </div>
 
         <div class="naveselezione">
-          <h1 class="nnavselezione">Incrociatore pesante HMS York</h1>
+          <p class="nnavselezione">Incrociatore pesante HMS York</p>
           <div class="imgselezione"> 
-            <h2 class="spazim"><img src="image/Incrociatore Pesante HMS York.jpg" alt="incrociatore pesante HMS York" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
+            <p class="spazim"><img src="image/Incrociatore Pesante HMS York.jpg" alt="incrociatore pesante HMS York" width="100%" height="100%" style="max-height:100%; max-width:100%"></p>
           </div>
           <div class="infos">
-            <h3 class="desc"> L’incrociatore pesante HMS York è una buona fusione tra potenza di fuoco e mobilità, non è specializzato nella caccia ai sommergibili ma farà sempre un buon lavoro;il suo armamento speciale è il Bombardiere imbarcato; con l’utilizzo di una catapulta idraulica, si può lanciare un bombardiere leggero che può sganciare in una casella un carica in grado di stanare un possibile sommergibile, non è obbligatorio che il sommergibile sia individuato</h3>           
+            <p class="desc"> L’incrociatore pesante HMS York è una buona fusione tra potenza di fuoco e mobilità, non è specializzato nella caccia ai sommergibili ma farà sempre un buon lavoro;il suo armamento speciale è il Bombardiere imbarcato; con l’utilizzo di una catapulta idraulica, si può lanciare un bombardiere leggero che può sganciare in una casella un carica in grado di stanare un possibile sommergibile, non è obbligatorio che il sommergibile sia individuato</p>           
           </div>         
             <div class="button">
                 <input class="bott1" type="button" onclick="nave3()" value="SELEZIONA">
@@ -49,12 +49,12 @@
         </div>
 
         <div class="naveselezione">   
-          <h1 class="nnavselezione"> Corazzata HMS King George V </h1>
+          <p class="nnavselezione"> Corazzata HMS King George V </p>
           <div class="imgselezione"> 
-            <h2 class="spazim"><img src="image/Corazzata HMS King George V.jpg" alt="corazzata HMS King George V" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
+            <p class="spazim"><img src="image/Corazzata HMS King George V.jpg" alt="corazzata HMS King George V" width="100%" height="100%" style="max-height:100%; max-width:100%"></p>
           </div>
           <div class="infos">
-            <h3 class="desc"> La corazzata HMS King George V è un guerriero da battaglia sul mare, ma non è una nave adatta per distruggere un sommergibile; questo mostro d'acciaio monta dei cannoni da 356 mm in grado di devastare c’ho che colpisce, il suo armamento speciale è il sovraccarico motori in cui la nave, per un piccolo lasso di turni, aumenta la distanza che può percorrere</h3>
+            <p class="desc"> La corazzata HMS King George V è un guerriero da battaglia sul mare, ma non è una nave adatta per distruggere un sommergibile; questo mostro d'acciaio monta dei cannoni da 356 mm in grado di devastare c’ho che colpisce, il suo armamento speciale è il sovraccarico motori in cui la nave, per un piccolo lasso di turni, aumenta la distanza che può percorrere</p>
         </div>
             <div class="button">
                 <input class="bott1" type="button" onclick="nave4()" value="SELEZIONA">
@@ -62,12 +62,12 @@
         </div>
 
         <div class="naveselezione">
-          <h1 class="nnavselezione"> Portaerei HMS Ark Royal </h1>
+          <p class="nnavselezione"> Portaerei HMS Ark Royal </p>
           <div class="imgselezione"> 
-            <h2 class="spazim"><img src="image/Portaerei HMS Ark Royal.jpg" alt="Portaerei HMS Ark Royal" width="100%" height="100%" style="max-height:100%; max-width:100%"></h2>
+            <p class="spazim"><img src="image/Portaerei HMS Ark Royal.jpg" alt="Portaerei HMS Ark Royal" width="100%" height="100%" style="max-height:100%; max-width:100%"></p>
           </div>
           <div class="infos">
-            <h3 class="desc"> La HMS Ark Royal è l’ammiraglia della Royal Navy, Questa maestosa nave ha come armamento principale il ponte di volo da cui i suoi aerei possono partire e distruggere i bersagli, ha tre tipologie di ’aerei: il bombardiere; con cui può danneggiare, il ricognitore con cui può rilevare le navi nemiche e l’aereo sonar è in grado di sganciare piccoli rilevatori sonar in mare con cui trovare possibili sommergibili</h3>
+            <p class="desc"> La HMS Ark Royal è l’ammiraglia della Royal Navy, Questa maestosa nave ha come armamento principale il ponte di volo da cui i suoi aerei possono partire e distruggere i bersagli, ha tre tipologie di ’aerei: il bombardiere; con cui può danneggiare, il ricognitore con cui può rilevare le navi nemiche e l’aereo sonar è in grado di sganciare piccoli rilevatori sonar in mare con cui trovare possibili sommergibili</p>
           </div>
             <div class="button">
                 <input class="bott1" type="button" onclick="nave5()" value="SELEZIONA">
