--- a/Comandi.htm
+++ b/Comandi.htm
@@ -5,62 +5,9 @@
         <script src="script.js"></script>
         <title></title>
     </head>
-    <body>
-        <div class="schermata_2">
-            <p id="titobarca">Comandi di gioco</p>
-            <table id="table1">
-                <tr class="selez">
-                    <td class="selez">
-                        <p class="desc1" > W </p>
-                    </td>
-                    <td class="selez">
-                        <p class="desc"> Permette di muovere verso l'alto la nave </p>
-                    </td>
-                </tr>
-                <tr class="selez">
-                    <td class="selez">
-                        <p class="desc1"> A </p>
-                    </td>
-                    <td class="selez">
-                        <p class="desc"> Permette di muovere verso sinistra la nave </p>
-                    </td>
-                </tr>
-                <tr class="selez">
-                    <td class="selez">
-                        <p class="desc1"> S </p>
-                    </td>
-                    <td class="selez">
-                        <p class="desc"> Permette di muovere verso il basso la nave </p>
-                    </td>
-                </tr>
-                <tr class="selez">
-                    <td class="selez">
-                        <p class="desc1"> D </p>
-                    </td>
-                    <td class="selez">
-                        <p class="desc"> Permette di muovere verso destra la nave </p>
-                    </td>
-                </tr>
-                <tr class="selez">
-                    <td class="selez">
-                        <p class="desc1"> L </p>
-                    </td>
-                    <td class="selez">
-                        <p class="desc"> Permette di scagliare un attacco base</p>
-                    </td>
-                </tr>
-                <tr class="selez">
-                    <td class="selez">
-                        <p class="desc1">K </p>
-                    </td>
-                    <td class="selez">
-                        <p class="desc">Permette di attivare l'attacco speciale </p>
-                    </td>
-                </tr>
-
-            </table>
-        </div>    
-        
+    <body class ="schermata_2"> 
+        <div>
+            <img src="image/Comandi.png" alt="Comandi di gioco" class="comandi">
+        </div>
     </body>
 </html>
-
