--- a/Gioco.htm
+++ b/Gioco.htm
@@ -2,6 +2,7 @@
 <html lang="it">
     <head>
         <link rel="stylesheet" href="stile.css">
+        <link rel="icon" href="image/favicon.jpg">
         <script src="script.js"></script>
         <title>Seleziona nave</title>
     </head>
