--- a/Regole.htm
+++ b/Regole.htm
@@ -13,7 +13,7 @@
                 <tr class="selez">
                     <td class="selez">
                         <p class="desc">Il gioco è ambientato durante la seconda guerra mondiale ed il giocatore, pilota di una nave della Royal Navy, ha l'obiettivo di eliminare un U-Boat tedesco che sta minacciando di distruggere un convoglio alleato.
-La durata di una partita è di 7 minuti, se riuscirai a distruggere l’uboot in tempo avrai vinto la partita, ma se allo scadere dei 7 minuti l’uboot non è stato distrutto, la partita è persa.
+-La durata di una partita è di 7 minuti, se riuscirai a distruggere l’uboot in tempo avrai vinto la partita, ma se allo scadere dei 7 minuti l’uboot non è stato distrutto, la partita è persa.
 
 - Il sommergibile starà per 40 secondi sott’acqua, dopodiché dovrà riemergere per prendere aria per 30 secondi, al termine dei quali tornerà sott’acqua.
 
