--- a/Regole.htm
+++ b/Regole.htm
@@ -6,26 +6,18 @@
         <script src="script.js"></script>
         <title></title>
     </head>
-    <body>
-        <div class="schermata_2">
-        <p id="titobarca">Regole</p>
-            <table id="table1">
-                <tr class="selez">
-                    <td class="selez">
-                        <p class="desc">Il gioco è ambientato durante la seconda guerra mondiale ed il giocatore, pilota di una nave della Royal Navy, ha l'obiettivo di eliminare un U-Boat tedesco che sta minacciando di distruggere un convoglio alleato.
--La durata di una partita è di 7 minuti, se riuscirai a distruggere l’uboot in tempo avrai vinto la partita, ma se allo scadere dei 7 minuti l’uboot non è stato distrutto, la partita è persa.
-
-- Il sommergibile starà per 40 secondi sott’acqua, dopodiché dovrà riemergere per prendere aria per 30 secondi, al termine dei quali tornerà sott’acqua.
-
-- Il cannone ha colpi illimitati, ma si dovrà aspettare 10 secondi tra uno sparo e l’altro.
-
-- L’armamento speciale ha caratteristiche diverse per ogni nave, ma tutti hanno un tempo di ricarica di 20 secondi dopo l’utilizzo e ognuno ha un numero limitato di usi.
-perderai la partita.
-</p>
-                    </td>    
-                </tr>
-                
-            </table>
-        </div>
+    <body class="schermata_2">
+        <h class="titoloselezione">Regole</h>>
+        <p class="regole">Il gioco è ambientato durante la seconda guerra mondiale ed il giocatore, pilota di una nave della Royal Navy, ha l'obiettivo di eliminare un U-Boat tedesco che sta minacciando di distruggere un convoglio alleato.<br>
+            <br>
+            -	La durata di una partita è di 7 minuti, se riuscirai a distruggere l’uboot in tempo avrai vinto la partita, ma se allo scadere dei 7 minuti l’uboot non è stato distrutto, la partita è persa.<br>
+            <br>
+            -	Il sommergibile starà per 40 secondi sott’acqua, dopodiché dovrà riemergere per prendere aria per 30 secondi, al termine dei quali tornerà sott’acqua.<br>
+            <br>
+            -	Il cannone ha colpi illimitati, ma si dovrà aspettare 10 secondi tra uno sparo e l’altro.<br>
+            <br>
+            -	L’armamento speciale ha caratteristiche diverse per ogni nave, ma tutti hanno un tempo di ricarica di 20 secondi dopo l’utilizzo e ognuno ha un numero limitato di usi.<br>
+            perderai la partita.
+            </p>
     </body>
 </html>
