--- a/Regole.htm
+++ b/Regole.htm
@@ -10,14 +10,17 @@
         <h class="titoloselezione">Regole</h>>
         <p class="regole">Il gioco è ambientato durante la seconda guerra mondiale ed il giocatore, pilota di una nave della Royal Navy, ha l'obiettivo di eliminare un U-Boat tedesco che sta minacciando di distruggere un convoglio alleato.<br>
             <br>
-            -	La durata di una partita è di 7 minuti, se riuscirai a distruggere l’uboot in tempo avrai vinto la partita, ma se allo scadere dei 7 minuti l’uboot non è stato distrutto, la partita è persa.<br>
+            -	La durata di una partita è di <span style="font-weight: bold;">7 minuti</span>, se riuscirai a distruggere l’U-boat in tempo avrai vinto la partita, ma se allo scadere del tempo l’U-boat non è stato distrutto, la partita è persa.<br>
             <br>
-            -	Il sommergibile starà per 40 secondi sott’acqua, dopodiché dovrà riemergere per prendere aria per 30 secondi, al termine dei quali tornerà sott’acqua.<br>
+            -	Il <span style="text-decoration: underline;">sommergibile</span> starà per <span style="font-weight: bold;">40 secondi</span> sott’acqua, dopodiché dovrà riemergere per prendere aria per <span style="font-weight: bold;">30 secondi</span>, al termine dei quali tornerà sott’acqua.<br>
             <br>
-            -	Il cannone ha colpi illimitati, ma si dovrà aspettare 10 secondi tra uno sparo e l’altro.<br>
+            -	Ogni <span style="text-decoration: underline;">nave</span> ha una <span style="font-weight: bold;">velocità</span>(numero di caselle che percorre) e una <span style="font-weight: bold;">visibilità</span>(raggio di caselle all' interno del quale è visibile l' U-boat se emerso) diverse, espresse in caselle.
             <br>
-            -	L’armamento speciale ha caratteristiche diverse per ogni nave, ma tutti hanno un tempo di ricarica di 20 secondi dopo l’utilizzo e ognuno ha un numero limitato di usi.<br>
-            perderai la partita.
+            È inoltre dotata di un <span style="font-weight: bold;">sonar</span> che gli permette, con un certo raggio, di conoscere le caselle di distanza dell U-boat sia sopra che sotto l'acqua.<br>
+            <br>
+            -	Il <span style="text-decoration: underline;">cannone</span> ha colpi illimitati, ma si dovrà aspettare 10 secondi tra uno sparo e l’altro.<br>
+            <br>
+            -	L’<span style="text-decoration: underline;">armamento speciale</span> ha caratteristiche diverse per ogni nave, ma tutti hanno un tempo di ricarica di <span style="font-weight: bold;">20 secondi</span> dopo l’utilizzo e ognuno ha un numero <span style="font-weight: bold;">limitato</span> di usi.<br>
             </p>
     </body>
 </html>
