--- a/gameplay.htm
+++ b/gameplay.htm
@@ -16,6 +16,7 @@
             </div>
             <p class="desc">Sonar</p>
             <div class="conts" id="sonar"></div>
+            <div id="abilita"></div>
         </div>
         <div id="campo"></div>
         <audio controls loop src="sounds/soundtrack.mp3"></audio>
