--- a/Regole.htm
+++ b/Regole.htm
@@ -7,7 +7,7 @@
         <title></title>
     </head>
     <body class="schermata_2">
-        <h1 class="titoloselezione">REGOLE</h1>>
+        <h1 class="titoloregole">REGOLE</h1>
             <p class="regole">Il gioco è ambientato durante la seconda guerra mondiale ed il giocatore, pilota di una nave della Royal Navy, ha l'obiettivo di eliminare un U-Boat tedesco che sta minacciando di distruggere un convoglio alleato. <br>
                 <br>
                 -	La durata di una partita è di <span style="font-weight: bold;">7 minuti</span>, se riuscirai a distruggere l’U-boat in tempo avrai vinto la partita, ma se allo scadere del tempo l’U-boat non è stato distrutto, la partita è persa. <br>
