--- a/gameplay.htm
+++ b/gameplay.htm
@@ -9,13 +9,13 @@
     <body class = "schermata_2">
         <div class="parametri">
             <p id="countdown">7:00</p>
-            <p class="desc">Vita U-boat</p>
+            <p class="para">Vita U-boat</p>
             <div class="health">
                 <div class="health__fill"></div>
                 <span class="health__text">0 HP</span>
             </div>
-            <p class="desc">Sonar</p>
-            <div class="conts" id="sonar"></div>
+            <p class="para">Sonar</p>
+            <div class="desc" id="sonar"></div>
             <div id="abilita"></div>
         </div>
         <div id="campo"></div>
