--- a/fine.htm
+++ b/fine.htm
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="it">
+    <head>
+        <link rel="stylesheet" href="stile.css">
+        <link rel="icon" href="image/favicon.jpg">
+        <script src="script.js"></script>
+        <title>Caccia all' UBoot</title>
+    </head>
+    <body class="schermata_2">
+        <div id="aaa"></div>
+    </body>
+</html>
