--- a/Gioco.htm
+++ b/Gioco.htm
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="stile.css">
         <link rel="stylesheet" href="mobile.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="image/favicon.jpg">
         <script src="script.js"></script>
         <title>Seleziona nave</title>
