--- a/fine.htm
+++ b/fine.htm
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="stile.css">
         <link rel="icon" href="image/favicon.jpg">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="script.js"></script>
         <title>Caccia all' UBoot</title>
     </head>
